--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ data-aos-duration="1500">
     <div class="col-md-4">
     <div class="team-member image-zoom">
       <div class="image-zoom-warpper" data-aos="fade-right">
-        <img src="c:\Users\12\Pictures\Saved Pictures\1.jpeg" alt="devi1">
+        <img src="../images/1.jpeg" alt="devi1">
       </div>
       
     </div></div>
