--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ data-aos-duration="1500">
       <div class="col-md-4">
               <div class="team-member image-zoom">
                 <div class="image-zoom-warpper"data-aos="fade-right">
-                  <img src="./images/iit.jpeg" alt="devi1">
+                  <img src="../images/iit.jpeg" alt="devi1">
                 </div>
                 
               </div></div>
@@ -294,7 +294,7 @@ data-aos-duration="1500">
     <div class="col-md-4">
               <div class="team-member image-zoom">
                 <div class="image-zoom-warpper"data-aos="fade-right">
-                  <img src="../images/10.jpg" alt="devi1">
+                  <img src="./images/10.jpg" alt="devi1">
                 </div>
                 
               </div></div>
