--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@ data-aos-duration="1500">
         <form action="https://formspree.io/f/xjvqkzld" method="post" class="row g-3 p-lg-5 p-4 bg-dark theme-shadow">
           <div class="form-group col-lg-6 ">
           
-            <input text class="form-control" placeholder="Enter first name">
+            <input type="text" class="form-control" placeholder="Enter first name">
           </div>
           <div class="form-group col-lg-6">
-            <input type="text class=four-control" placeholder="Enter second name">
+            <input type="text" class=four-control" placeholder="Enter second name">
           </div>
           <div class="form-group col-lg-6">
             <input type="email" class="from-control" placeholder="Enter your email ID">
