--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="col-lg-5"data-aos="fade-down" data-aos-delay="50">
           
-          <p class="mt-3 mb-3" style="font-size:26px; font-family:Elephant; color:darkgrey">Hello Everyone!. I am Devi. I am a <span style="color:darkorange"> WEB DEVELOPER</span> fresher. I am graduate 
+          <p class="mt-3 mb-3" style="font-size:26px; font-family:Elephant; color:white">Hello Everyone!. I am Devi. I am a <span style="color:darkorange"> WEB DEVELOPER</span> fresher. I am graduate 
             last year from Manonmaniyam University pursuing a bachler's degree in<span style="color:darkorange"> INFORMATION TECHNOLOGY</span>. I'm very  excited for opportunity to learn the newest and cutting edge technologies in the field. Throughout 
           my college career, i have studied a range of programming languages and languages for web development such as<span style="color:darkorange"> C, C++, Java, .Net, Oracle,html , css, Javascript, Php and Bootstrap.</span>, I am waiting for job opportunity.This is all about me.</p>
           </div></div></div></section>
